--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:usesCleartextTraffic="true"
-
-        android:theme="@style/Theme.Catchup_Android">
+        android:theme="@style/Theme.Catchup_Android"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Monitoring"
+            android:exported="false" />
+        <activity
+            android:name=".Mypage"
+            android:exported="false" />
         <activity
             android:name=".Join"
             android:exported="false" />
