--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,28 +9,44 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.Catchup_Android"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".FindId"
+            android:exported="true">
 
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Catchup_Android">
+        </activity>
+        <activity
+            android:name=".FindPw"
+            android:exported="true">
 
+        </activity>
+        <activity
+            android:name=".SetPw"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".MyFarm"
+            android:exported="true">
+
+
+        </activity>
         <activity
             android:name=".Monitoring"
-            android:exported="false" />
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".Mypage"
             android:exported="false" />
-
         <activity
             android:name=".Join"
             android:exported="false" />
         <activity
             android:name=".StartActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Home"
@@ -40,7 +56,14 @@
             android:exported="false" />
         <activity
             android:name=".Login2"
-            android:exported="true" />
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
