--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,23 @@
         android:theme="@style/Theme.Catchup_Android"
         android:usesCleartextTraffic="true">
         <activity
+            android:name="com.example.catchup_android.Reservation_list"
+            android:exported="false" />
+        <activity
             android:name="com.example.catchup_android.DiaryList"
             android:exported="false" />
         <activity
             android:name="com.example.catchup_android.DiaryWrite"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name="com.example.catchup_android.Reservation_add"
             android:exported="false" />
         <activity
             android:name=".FindId"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".FindPw"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".SetPw"
             android:exported="true" />
@@ -40,9 +37,7 @@
             android:exported="true" />
         <activity
             android:name=".Monitoring"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Mypage"
             android:exported="true" />
@@ -51,7 +46,7 @@
             android:exported="true" />
         <activity
             android:name=".StartActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
