--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'com.google.code.gson:gson:2.8.5' // gson 2.85 라이브러리
-    implementation 'com.android.volley:volley:1.2.1' // volly 1.2.1라이브러리
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'// volly 1.2.1라이브러리
 
 
     testImplementation 'junit:junit:4.13.2'
