--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_edit2"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -16,7 +16,7 @@
             android:exported="false" />
         <activity
             android:name="com.example.catchup_android.DiaryList"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name="com.example.catchup_android.DiaryWrite"
             android:exported="true"></activity>
@@ -62,7 +62,11 @@
         <activity
             android:name=".Login2"
             android:exported="true" />
+        <activity
+            android:name=".DiaryMain"
+            android:exported="true" >
 
+        </activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
