--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,14 +38,16 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment:2.4.2'
     implementation 'androidx.navigation:navigation-ui:2.4.2'
-    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.android.volley:volley:1.2.1'// volly 1.2.1라이브러리
+    implementation 'com.google.code.gson:gson:2.8.5' // gson 2.85 라이브러리
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.code.gson:gson:2.8.5' // gson 2.85 라이브러리
-    implementation 'com.android.volley:volley:1.2.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'// volly 1.2.1라이브러리
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // 캘린더 추가
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
